[gd_scene format=3 uid="uid://cl2rc7egiv5em"]

[ext_resource type="Script" uid="uid://dgtdisipg8n63" path="res://addons/spatial_remarks/sr_dock/srd_detail.gd" id="1_0qdlq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mskb4"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.028662786, 0.15198252, 0.047491834, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0qdlq"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.264422, 0.00018688418, 1.2032688e-08, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="SRDDetail" type="HBoxContainer" unique_id=2122743516 node_paths=PackedStringArray("info_text", "text_edit")]
size_flags_horizontal = 3
alignment = 1
script = ExtResource("1_0qdlq")
info_text = NodePath("VBoxContainer/InfoBar")
text_edit = NodePath("TextEdit")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1815475883]
layout_mode = 2

[node name="InfoBar" type="RichTextLabel" parent="VBoxContainer" unique_id=840854273]
custom_minimum_size = Vector2(180, 150)
layout_mode = 2
bbcode_enabled = true
text = "Position: xxxxxxxxx
Position: 
Position: 
Position: 
Position: 
"

[node name="ButtonHBC" type="HBoxContainer" parent="VBoxContainer" unique_id=1096821738]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="SaveButton" type="Button" parent="VBoxContainer/ButtonHBC" unique_id=162362286]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_mskb4")
text = "Save"

[node name="DeleteButton" type="Button" parent="VBoxContainer/ButtonHBC" unique_id=1432003031]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0qdlq")
text = "Delete"

[node name="CloseButton" type="Button" parent="VBoxContainer/ButtonHBC" unique_id=1563008916]
layout_mode = 2
text = "Close"

[node name="TextEdit" type="TextEdit" parent="." unique_id=1644379068]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/ButtonHBC/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBC/DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonHBC/CloseButton" to="." method="_on_close_button_pressed"]
